@startuml
'https://plantuml.com/class-diagram

class AdresseReseau
class AdresseMachine
class ServeurWeb
class ChargerCode

AdresseReseau "*" <-- "*" ServeurWeb
AdresseMachine "1" <-- "*" ServeurWeb
ChargerCode <-- ServeurWeb

class AdresseReseau{
- adresseR : String
+ AdresseReseau(Document doc, String balise)
+ getChaineAdresseR() : String[]
}

class AdresseMachine{
- adresseM : String
+ AdresseMachine(Socket)
+ getChaineAdresseM() : String[]
}

class ServeurWeb {
+ creerDocument(String): Document
}

class ChargerCode {
+ <static> interpreterCode(String) : String
}

@enduml